namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-transfer-scheduler-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-transfer-scheduler-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public_move-and-improve"
    cloud-platform.justice.gov.uk/application: "HMPPS Schedule a transfer for a prisoner"
    cloud-platform.justice.gov.uk/owner: "Move and Improve: moveandimprove@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-transfer-scheduler-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-move-and-improve"
    cloud-platform.justice.gov.uk/slack-alert-channel: "move-and-improve-alerts-non-prod"
